# MMOServer

./: .gitignore  CMakeLists.txt  README.markdown  build_server.bat  build_server.sh
data/: ServerStart.bat
mmoserverdb/: README
mmoserverdb/swganh/functions/: sf_DefaultHouseCreate.sql
mmoserverdb/swganh/scripts/: account.sql  attributes.sql  badge_categories.sql  badges.sql  biography_planet.sql  biography_profession.sql  biography_wars.sql  building_families.sql  building_types.sql  character_appearance.sql  character_attributes.sql  character_tutorial.sql  characters.sql  (+88 more)
src/: CMakeLists.txt
src/ChatServer/: CMakeLists.txt  CharacterAdminHandler.cpp  ChatManager.cpp  ChatServer.cpp  GroupObject.cpp  TradeManagerChat.cpp
src/Common/: BuildInfo.cc  CMakeLists.txt  event_dispatcher_unittest.cc
src/ConnectionServer/: CMakeLists.txt  ConnectionServer.cpp
src/DatabaseManager/: CMakeLists.txt
src/LoginServer/: CMakeLists.txt
src/MessageLib/: CMakeLists.txt
src/NetworkManager/: CMakeLists.txt  SocketReadThread.cpp  SocketWriteThread.cpp
src/PingServer/: CMakeLists.txt  PingServer.cpp
src/ScriptEngine/: CMakeLists.txt
src/SwgProtocol/: CMakeLists.txt
src/Utils/: ActiveObject.cpp  CMakeLists.txt  Timer.cpp  typedefs.h
src/ZoneServer/: BadgeRegionFactory.cpp  BuffManager.cpp  CMakeLists.txt  MissionManager.cpp  OCStructureHandlers.cpp  ObjectFactory.cpp  Shuttle.cpp  SpawnRegionFactory.cpp  StructureManager.cpp  TravelMapHandler.cpp  WorldManagerDataBaseHandlers.cpp  ZoneServer.cpp
src/anh/: CMakeLists.txt
tools/cmake/: MMOServerLibrary.cmake
